# All except the code in 'ip_zk_proof' is copied from the 'bulletproofs' crate. It has been forked here to do some
# modifications to the code, but everything is based to their library

[package]
name = "ip_zk_proof"
version = "0.1.0"
authors = ["inigoquerejeta"]
edition = "2018"

[dependencies]
curve25519-dalek = { version = "2", default-features = false, features = ["u64_backend", "nightly", "serde", "alloc"] }
sha3 = { version = "0.8", default-features = false }
subtle = { version = "2", default-features = false }
digest = { version = "0.8", default-features = false }
rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
rand = { version = "0.7", default-features = false, optional = true }
byteorder = { version = "1", default-features = false }
serde = { version = "1", default-features = false, features = ["alloc"] }
serde_derive = { version = "1", default-features = false }
thiserror = { version = "1", optional = true }
merlin = { version = "2", default-features = false }
clear_on_drop = { version = "0.2", default-features = false}
rand_chacha = "0.2"

[dev-dependencies]
criterion = "0.3"
bincode = "1"
rand_chacha = "0.2"

[features]
default = ["std"]
std = ["rand", "rand/std","thiserror"]

[[bench]]
name = "ip_zk_proof"
harness = false