[package]
name = "zkSENSE_rust_proof"
version = "0.1.0"
authors = ["iquerejeta <querejeta.inigo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pedersen_commitments_proofs = { path = "../pedersen_commitments_proofs"}
ip_zk_proof = { path = "../inner_product_proof" }
num-bigint = "0.3"
curve25519-dalek = { version = "2", default-features = false, features = ["u64_backend", "serde", "alloc"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "proof_generation"
harness = false

